<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.tourstart.members.editActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/firstNameGroupe">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:id="@+id/firstName"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstNameInput"
                    android:inputType="textPersonName"
                    android:width="200dp"
                    android:textSize="25sp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastNameGroupe"
                android:layout_below="@+id/firstNameGroupe"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:id="@+id/lastName"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastNameInput"
                    android:inputType="textPersonName"
                    android:width="200dp"
                    android:textSize="25sp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genderGroupe"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/lastNameGroupe"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:id="@+id/gender"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/genderInput"
                    android:layout_weight="0.52"
                    android:spinnerMode="dropdown"
                    android:layout_marginLeft="40dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birthDayGroupe"
                android:layout_marginTop="23dp"
                android:layout_below="@+id/genderGroupe"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birth_day"
                    android:id="@+id/birhtDay"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_date"
                    android:id="@+id/birthDayInput"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginStart="26dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addressGroupe"
                android:layout_below="@+id/birthDayGroupe"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:id="@+id/address"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/addressInput"
                    android:inputType="textPersonName"
                    android:width="200dp"
                    android:textSize="25sp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mapLocationGroupe"
                android:layout_below="@+id/addressGroupe"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="13dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_location"
                    android:id="@+id/mapLocation"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mapLocationGroupe"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_location"
                    android:id="@+id/mapLocationInput"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="26dp" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
